@@ -103,19 +103,26 @@ typedef struct {
   pthread_cond_t is_free;         /* signaled when free */
 } st_masterlock;
 
-static void st_masterlock_init(st_masterlock * m)
+/* Returns non-zero on failure */
+static int st_masterlock_init(st_masterlock * m)
 {
+  int rc;
   if (!m->init) {
-    // FIXME: check errors
-    pthread_mutex_init(&m->lock, NULL);
-    pthread_cond_init(&m->is_free, NULL);
+    rc = pthread_mutex_init(&m->lock, NULL);
+    if (rc != 0) goto out_err;
+    rc = pthread_cond_init(&m->is_free, NULL);
+    if (rc != 0) goto out_err2;
     m->init = 1;
   }
   m->busy = 1;
   atomic_store_release(&m->waiters, 0);
+  return 0;
 
-  return;
-};
+ out_err2:
+  pthread_mutex_destroy(&m->lock);
+ out_err:
+  return rc;
+}
 
 static uintnat st_masterlock_waiters(st_masterlock * m)
 {
@@ -124,7 +131,7 @@ static uintnat st_masterlock_waiters(st_masterlock * m)
 
 static void st_bt_lock_acquire(st_masterlock *m) {
 
-  /* We do not want to signal the backup thread is it is not "working"
+  /* We do not want to signal the backup thread if it is not "working"
      as it may very well not be, because we could have just resumed
      execution from another thread right away. */
   if (caml_bt_is_in_blocking_section()) {
