@@ -71,29 +71,12 @@ let create fn arg =
 let exit () =
   raise Exit
 
-(* Preemption *)
-
-let preempt signal = yield()
-
 (* Initialization of the scheduler *)
-
-let preempt_signal =
-  match Sys.os_type with
-  | "Win32" -> Sys.sigterm
-  | _       -> Sys.sigvtalrm
 
 let () =
   thread_initialize ();
-  Sys.set_signal preempt_signal (Sys.Signal_handle preempt);
-  (* Callback in [caml_shutdown], when the last domain exits. *)
-  Callback.register "Thread.at_shutdown" (fun () ->
-    thread_cleanup();
-    (* In case of DLL-embedded OCaml the preempt_signal handler
-       will point to nowhere after DLL unloading and an accidental
-       preempt_signal will crash the main program. So restore the
-       default handler. *)
-    Sys.set_signal preempt_signal Sys.Signal_default
-  )
+  (* Called back in [caml_shutdown], when the last domain exits. *)
+  Callback.register "Thread.at_shutdown" thread_cleanup
 
 (* Wait functions *)
 
