@@ -72,6 +72,10 @@ Working version
   (Xavier Leroy, report by Török Edwin, review by Anil Madhavapeddy
   and Nicolás Ojeda Bär)
 
+- #11386: Simplifications and fixes to multicore systhreads implementation.
+  (Guillaume Munch-Maccagnoni, review by Anil Madhavapeddy and KC
+   Sivaramakrishnan)
+
 ### Code generation and optimizations:
 
 - #11239: on x86-64 and RISC-V, reduce alignment of OCaml stacks from 16 to 8.
